--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,9 @@
-
-
 trigger:
   branches:
     include:
       - main
 
 pool: HTML-CI-Pipeline
-  
 
 steps:
   - checkout: self
@@ -21,4 +18,5 @@ steps:
       sshEndpoint:  'ssh-comms'
       runOptions: 'commands'
       commands: |
-        scp $(Build.ArtifactStagingDirectory)/spl.zip azureuser@172.210.131.237: /ubuntu/home
+        mkdir -p /home/azureuser/spl
+        scp $(Build.ArtifactStagingDirectory)/spl.zip azureuser@172.210.131.237: /home/azureuser/spl/
